[ihm] Fixed text align on callerId widget(close #753)

--- a/src/domogik/ui/djangodomo/core/templates/widgets/dmg_4x2_communicationCallerId/style.css
+++ b/src/domogik/ui/djangodomo/core/templates/widgets/dmg_4x2_communicationCallerId/style.css
@@ -27,19 +27,15 @@
 }
 
 .dmg_4x2_communicationCallerId .newbg {
-    position:absolute;
-    width:100%;
-    height:100%;
     background:rgba(0,0,0,0.8);
     -moz-border-radius: 0.8em;
     -webkit-border-radius: 0.8em;
+    display:table-cell;
+    vertical-align:middle;
 }
 
 .dmg_4x2_communicationCallerId .new {
     font-size:1.2em;
-    position:absolute;
-    top:4em;
-    left:2em;
     border: 1px solid #cccccc;
     -moz-border-radius: 2em;
     -webkit-border-radius: 2em;
@@ -51,4 +47,5 @@
     background-position: 5px 50%;
     background-repeat: no-repeat;
     background-image: url(images/phone_16.png);
+    margin:auto;
 }
